# CMPE-275-mini2

./: .gitignore  README.md  installation_notes.md  mini2-chunks.md  requirements.txt
config/: topology.json
cpp/: CMakeLists.txt  mini2.grpc.pb.cc  mini2.grpc.pb.h  mini2.pb.cc  mini2.pb.h
cpp/client/: client.cpp
cpp/include/taxi/: CsvReader.hpp  MetricsRecorder.hpp  QueryEngine.hpp  QueryTypes.hpp  TimeIndex.hpp  TripDataSoA.hpp  TripRecord.hpp
cpp/server/: node_server.cpp
cpp/src/: CsvReader.cpp  MetricsRecorder.cpp  QueryEngine.cpp  TimeIndex.cpp  TripRecord.cpp  inspect_triprecord_layout.cpp  verify_csv_load.cpp
data/: partition_A.csv  partition_B.csv  partition_C.csv  partition_D.csv  partition_E.csv  partition_F.csv  partition_G.csv  partition_H.csv  partition_I.csv  test_sample.csv
docs/: HANDOFF_SETH.md  HANDOFF_SHAMATHMIKA.md  TRIPRECORD_LAYOUT.md
proto/: mini2.proto
python/: mini2_pb2.py  mini2_pb2_grpc.py  query_engine.py  trip_record.py
python/server/: node.py
scripts/: bench_cluster_elapsed.sh  combine_csv.py  launch_all.sh  launch_blue.sh  launch_python_nodes.sh  launch_yellow.sh  run_bft_fault_eval.sh  run_foundation_demo.sh  split_data.py  stop_python_nodes.sh  test_concurrent.sh
